# kedro-academy

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  README.md  abhishek-bhatia.md
agentic-reflection-poc/: .env.example  Makefile  README.md  pyproject.toml  requirements.txt  spec.md
agentic-reflection-poc/conf/base/: catalog.yml  catalog_langfuse.yml  catalog_llm.yml  parameters.yml  parameters_agent_run.yml  parameters_apply.yml  parameters_evaluation.yml  parameters_reflection.yml
agentic-reflection-poc/conf/local/: credentials.yml.example
agentic-reflection-poc/data/synthetic/: customers.json  eval_cases.json  products.json
agentic-reflection-poc/scripts/: seed_synthetic_data.py
agentic-reflection-poc/skills/: b2b-email-style.md
agentic-reflection-poc/src/agentic_reflection_poc/: __init__.py  __main__.py  pipeline_registry.py  settings.py
kedro-agentic-workflows/: .gitignore  README.md  pyproject.toml  requirements-langfuse.txt  requirements-opik.txt  requirements.txt  test_autogen.py
kedro-agentic-workflows/.viz/: styles.json
kedro-agentic-workflows/conf/: README.md
kedro-agentic-workflows/conf/base/: catalog.yml  catalog_evaluation.yml  catalog_evaluation_opik.yml  catalog_genai_config.yml  credentials.yml.template  evaluation.yml  evaluation_opik.yml  genai-config.yml  langfuse-config.yml  parameters.yml
kedro-agentic-workflows/conf/langfuse/: catalog_evaluation.yml  catalog_genai_config.yml  genai-config.yml
kedro-agentic-workflows/conf/opik/: catalog_evaluation.yml  catalog_genai_config.yml  genai-config.yml
kedro-agentic-workflows/data/evaluation/: support_eval_test.json
kedro-agentic-workflows/notebooks/: e2e_langfuse_evaluation_dataset.ipynb  e2e_opik_evaluation_dataset.ipynb
kedro-agentic-workflows/src/: test_opik_trace_clients.py  test_opik_trace_dataset.py  test_trace_dataset.py
kedro-agentic-workflows/src/kedro_agentic_workflows/: __init__.py  __main__.py  pipeline_registry.py  settings.py  utils.py
kedro-agentic-workflows/tests/: e2e_example.py
kedro-batch-agent/: .gitignore  README.md  pyproject.toml  requirements.txt  run_multiple.py
kedro-batch-agent/conf/: logging.yml
kedro-batch-agent/conf/base/: catalog.yml  parameters.yml
kedro-batch-agent/data/prompts/: completion_agent_prompt.txt  image_analysis_agent_prompt.txt
kedro-batch-agent/docs/source/: conf.py  index.rst
kedro-batch-agent/src/kedro_batch_agent/: __init__.py  __main__.py  settings.py
kedro-beginners/: First Steps with Kedro.ipynb  README.md  hello.py  pyproject.toml
kedro-beginners/solutions/: nb01_ex01.py
kedro-cyberpunk-knowledge-base/: README.md  bot.py  pyproject.toml  requirements.txt
kedro-cyberpunk-knowledge-base/conf/base/: catalog.yml  parameters.yml  parameters_process_transcript.yml  parameters_query_discord.yml  parameters_query_pipeline.yml
kedro-cyberpunk-knowledge-base/data/prompts/: query_prompt.json
kedro-cyberpunk-knowledge-base/data/raw/: Cyberpunk2077Transcript.txt
kedro-cyberpunk-knowledge-base/post/: KedroCyberpunkBlogPost.md  medium-copy.md
kedro-cyberpunk-knowledge-base/src/kedro_2077/: __init__.py  __main__.py  settings.py
kedro-databricks-bootcamp/03_intermediate/rocketfuel/: .gitignore  databricks.yml  pyproject.toml  requirements.txt
kedro-healthcare-graphrag/: pyproject.toml  requirements.txt
kedro-healthcare-graphrag/.streamlit/: config.toml
kedro-healthcare-graphrag/conf/base/: parameters_data_ingestion.yml  parameters_graph_construction.yml  parameters_query_answering.yml  parameters_vector_indexing.yml
kedro-healthcare-graphrag/src/graphrag/: __init__.py  datasets.py  settings.py  utils.py
kedro-hr-crew-workflow/: .gitignore  README.md  pyproject.toml
kedro-hr-crew-workflow/.viz/: kedro_pipeline_events.json  styles.json
kedro-hr-crew-workflow/conf/base/: catalog.yml  catalog_genai.yml  genai-config.yml  parameters.yml
kedro-hr-crew-workflow/conf/local/: cred.yml.example  credentials.yml.example
kedro-hr-crew-workflow/data/prompts/: email_draft_user_prompt.yml
kedro-hr-crew-workflow/data/reports/: ds_hr_report.docx  hr_report.docx  se_hr_report.docx
kedro-hr-crew-workflow/docs/: presentation.md
kedro-hr-crew-workflow/scripts/: create_sample_documents.py
kedro-hr-crew-workflow/src/hr_recruiting/: __init__.py  __main__.py  pipeline_registry.py  settings.py
kedro-intermediate/advanced-configuration/: README.md  pyproject.toml
kedro-intermediate/experiment-tracking/: README.md  pyproject.toml  requirements.txt
kedro-intermediate/experiment-tracking/.viz/: stats.json
kedro-intermediate/extending-kedro/: README.md  pyproject.toml  requirements.txt
kedro-intermediate/extending-kedro/.viz/: stats.json
kedro-intermediate/kedro-custom-hook/: pyproject.toml
kedro-intermediate/logging-hooks/: README.md  pyproject.toml
kedro-intermediate/namespace-pipelines/: README.md  pyproject.toml
kedro-mlrun-integration/kedro/risk-profile-classifier/: .gitignore  README.md  pyproject.toml  requirements.txt
kedro-ppt-autogen-workflow/: ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
kedro-ppt-autogen-workflow/.viz/: kedro_pipeline_events.json  stats.json  styles.json
kedro-ppt-autogen-workflow/conf/base/: catalog.yml  genai-config.yml  (+3 more)
kedro-ppt-autogen-workflow/pr_descriptions/: PR_96_foundation.md  PR_97_ma_pipeline.md  PR_98_sa_pipeline.md
kedro-rag-chatbot/: .gitignore  README.md  pyproject.toml  requirements.txt
kedro-rag-chatbot/conf/: logging.yml
kedro-reflection-agent/: .gitignore  DESIGN.md  Makefile  README.md  pyproject.toml  requirements.txt
kedro-reflection-agent/.streamlit/: config.toml
kedro-reflection-agent/app/: charts.py  command_strip.py  data_loader.py  embeds.py  formatting.py  kedro_viz_server.py  langfuse_analytics.py  main.py  runner.py  state.py  styles.py  ui_components.py
kedro-reflection-agent/conf/: logging.yml
kedro-reflection-agent/data/: demo_state.json
kedro-reflection-agent/docs/: Architecture.md  agenda.md  enterprise-architecture.md  serve.py
kedro-reflection-agent/scripts/: seed_demo.py  seed_synthetic_data.py
(+828 files in other folders)
