[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "experiment_tracking"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
experiment-tracking = "experiment_tracking.__main__:main"

[tool.kedro]
package_name = "experiment_tracking"
project_name = "experiment-tracking"
kedro_init_version = "0.19.9"
tools = [ "Data Structure",]
example_pipeline = "True"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "experiment_tracking.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "e0fd545464c5470ba9dc7e647e7311fc"
