[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "namespace_pipelines"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
namespace-pipelines = "namespace_pipelines.__main__:main"

[tool.kedro]
package_name = "namespace_pipelines"
project_name = "namespace-pipelines"
kedro_init_version = "0.19.9"
tools = [ "Data Structure",]
example_pipeline = "True"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "namespace_pipelines.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "d8a14effbfa84738884c36f841fb2abd"
